[package]
name = "lifting_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
axum-server = "0.6.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "macros"] }
tokio-postgres = "0.7.10"
dotenv = "0.15"
